--- a/uasdm-web/src/main/ng2/src/app/site/component/metadata-page/metadata-page.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/metadata-page/metadata-page.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-    <div *ngIf="page.selection.pointOfContact != null" [@fadeInOnEnter] class="row" style="margin-top: 20px;">
+    <div *ngIf="page.selection.pointOfContact != null" class="row" style="margin-top: 20px;">
         <div class="col-md-12">
 
             <div class="panel panel-default">
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="row" [@fadeInOnEnter]>
+    <div class="row">
         <div class="col-md-12">
 
             <div class="panel panel-default">
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div *ngIf="uav != null" [@fadeInOnEnter] class="row">
+    <div *ngIf="uav != null" class="row">
         <div class="col-md-12">
 
             <div class="panel panel-default">
