--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
@@ -1,4 +1,5 @@
 <div>
+	<h3>Metadata</h3>
     <div class="modal-body" tabindex="-1" role="dialog">
 
         <div *ngIf="isOldFormat" class="row error-container">
