--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -96,8 +96,8 @@
           <div class="col-md-2"></div>
           <div class="col-md-8">
             <div class="form-group">
-              <label for="description">Tool</label>
-              <input [(ngModel)]="values.tool" name="tool" type="input" class="form-control" placeholder="Tool..." />
+              <label for="description">Processing Software</label>
+              <input [(ngModel)]="values.tool" name="tool" type="input" class="form-control" placeholder="Software..." />
             </div>
           </div>
         </div>
