--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/artifact-page.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/artifact-page.component.html
@@ -14,28 +14,60 @@
     <ng-container *ngFor="let section of sections; let i = index">
       <tr>
       	<td>{{section.label}}</td>
-        <td>{{artifacts[section.folder] != null ? artifacts[section.folder].name : ''}}</td>
-        <td>{{artifacts[section.folder] != null ? artifacts[section.folder].tool : ''}}</td>
-        <td>{{artifacts[section.folder] != null ? artifacts[section.folder].lastModified : ''}}</td>
-        <td>{{artifacts[section.folder] != null ? artifacts[section.folder].description : ''}}</td>
+        <td>
+          <ng-container *ngIf="artifacts[section.folder] != null">
+            <table>
+	            <tr *ngFor="let artifact of artifacts[section.folder]">
+	              {{ artifact.name }}
+	            </tr>
+            </table>
+          </ng-container>
+        </td>
+        <td>
+          <ng-container *ngIf="artifacts[section.folder] != null">
+            <table>
+              <tr *ngFor="let artifact of artifacts[section.folder]">
+                {{ artifact.tool }}
+              </tr>
+            </table>
+          </ng-container>
+        </td>
+        <td>
+          <ng-container *ngIf="artifacts[section.folder] != null">
+            <table>
+              <tr *ngFor="let artifact of artifacts[section.folder]">
+                {{ artifact.lastModified }}
+              </tr>
+            </table>
+          </ng-container>
+        </td>
+        <td>
+          <ng-container *ngIf="artifacts[section.folder] != null">
+            <table>
+              <tr *ngFor="let artifact of artifacts[section.folder]">
+                {{ artifact.description }}
+              </tr>
+            </table>
+          </ng-container>
+        </td>
         <td *ngIf="!edit" style="text-align:right;">
-          <button *ngIf="artifacts[section.folder] != null" type="button" class="btn btn-warning"
+          <button *ngIf="artifacts[section.folder] != null && artifacts[section.folder].length > 0" type="button" class="btn btn-warning"
             [disabled]="processRunning" (click)="handleRemove(section)" style="margin: 5px 0;">
             Remove
           </button>
-          <button *ngIf="artifacts[section.folder] == null" type="button" class="btn btn-primary"
+          <button *ngIf="artifacts[section.folder] == null || artifacts[section.folder].length == 0" type="button" class="btn btn-primary"
             [disabled]="processRunning" (click)="handleUpload(section.folder)" style="margin: 5px 0;">
             Upload
           </button>
         </td>
         <td *ngIf="edit">
           <boolean-field *ngIf="section.folder === 'ptcloud'" [(value)]="config.processPtcloud"
-            [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'">
+            [label]="(artifacts[section.folder] != null && artifacts[section.folder].length > 0) ? 'Overwirte' : 'Generate'">
           </boolean-field>
           <boolean-field *ngIf="section.folder === 'dem'" [(value)]="config.processDem"
-            [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
+            [label]="(artifacts[section.folder] != null && artifacts[section.folder].length > 0) ? 'Overwirte' : 'Generate'"></boolean-field>
           <boolean-field *ngIf="section.folder === 'ortho'" [(value)]="config.processOrtho"
-            [label]="artifacts[section.folder] != null ? 'Overwirte' : 'Generate'"></boolean-field>
+            [label]="(artifacts[section.folder] != null && artifacts[section.folder].length > 0) ? 'Overwirte' : 'Generate'"></boolean-field>
         </td>
 
       </tr>
