Fix issue where the ability to download the all zip was displaying for collections where an all zip did not exist.

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/collection-modal.component.html
@@ -238,7 +238,7 @@
                   Download All
                 </button>
                 
-                <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning"
+                <button *ngIf="processable && entity.hasAllZip" type="button" class="btn btn-secondary" [disabled]="processRunning"
                   (click)="handleDownloadOdmAll()" title="Downloads the all.zip file generated from ODM."
                   style="margin-left: 5px;">
                   Download All Generated Data
