--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -169,7 +169,7 @@
       <div class="row" style="background-color: #ececec;">
         <div class="btn-holder" style="text-align: right;margin:20px 20px 20px 20px;">
           <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-          <button type="button" class="btn btn-secondary" [disabled]="!product.hasAllZip" style="margin-left: 5px;" (click)="handleDownload()">Download ODM Files</button>
+          <button *ngIf="product.hasAllZip" type="button" class="btn btn-secondary" style="margin-left: 5px;" (click)="handleDownload()">Download ODM Files</button>
           <button (click)="handleGoto()" class="btn btn-primary" style="margin-left: 5px;">
             Collection Details
           </button>
