--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -49,6 +49,15 @@ body {
   padding:5px;
 }
 
+.stac-layer-panel{ 
+  position:absolute; 
+  top: 10px; 
+  right: 10px; 
+  z-index:2;
+  padding:5px;
+}
+
+
 .site-explorer-list {
   padding: 20px;
   height: calc(100vh - 106px);
