--- a/uasdm-web/src/main/ng2/src/app/site/component/layer-panel/layer-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/layer-panel/layer-panel.component.html
@@ -2,117 +2,131 @@
     <b>{{ match.item.label}} - {{ match.item.total}}</b>
 </ng-template>
 
-<div>
-    <form #form="ngForm">
-        <div class="modal-body" tabindex="-1" role="dialog">
-            <ng-container *ngIf="viewMode === 0">
+<form #form="ngForm">
+    <ng-container *ngIf="viewMode === 0">
 
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>Layer Name</label>
-                        <input type="text" placeholder="Layer name..." [(ngModel)]="layer.layerName" name="layerName"
-                            required />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>Start Date</label>
-                        <input type="date" [(ngModel)]="layer.startDate" name="startDate" style="width: 100%;" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>End Date</label>
-                        <input type="date" class="form-element" [(ngModel)]="layer.endDate" name="endDate"
-                            style="width: 100%;" />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>Filter</label>
-                        <input class="form-control search-input" type="text" name="search" placeholder="Search..."
-                            [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource"
-                            (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10"
-                            [typeaheadMinLength]="2" [typeaheadItemTemplate]="bsItemTemplate"
-                            typeaheadOptionField="text" (keydown.enter)="$event.preventDefault()" />
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>Filters</label>
-                    </div>
-                </div>
-                <ng-container *ngFor="let filter of layer.filters">
-                    <div *ngIf="filter.field !== 'datetime'" class="row">
-                        <div class="col-md-10">
-                            {{filter.label}} contains {{filter.value}}
-                        </div>
-                        <div class="col-md-2">
-                            <button type="button" class="btn btn-warning" (click)="handleRemove(filter)">
-                                Remove
-                            </button>
-                        </div>
-                    </div>
-                </ng-container>
-
-            </ng-container>
-            <ng-container *ngIf="page != null">
-                <div class="row" *ngFor="let result of page.resultSet | paginate: { itemsPerPage: page.pageSize, currentPage: page.pageNumber, totalItems: page.count }">
-                    <div class="col-md-12">
-                        <label>{{result.properties.title}} - {{result.properties.datetime}}</label>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <label>Asset</label>
-                                <select [(ngModel)]="result.asset" [name]="result.id + '-asset'">
-                                    <ng-container *ngFor="let asset of result.assets | keyvalue">
-                                        <option
-                                            *ngIf="asset.value.type === 'image/tiff; application=geotiff; profile=cloud-optimized'"
-                                            [value]="asset.key">
-                                            {{asset.key}}
-                                        </option>
-                                    </ng-container>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <boolean-field [value]="result.enabled" (valueChange)="handleToggleItem(result)"
-                                    label="Enabled"></boolean-field>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <pagination-controls (pageChange)="onPageChange($event)" maxSize="10"></pagination-controls>
-
-            </ng-container>
+        <div class="row">
+            <div class="col-md-12">
+                <label>Layer Name</label>
+                <input type="text" placeholder="Layer name..." [(ngModel)]="layer.layerName" name="layerName"
+                    required />
+            </div>
         </div>
-        <div class="modal-footer">
+        <div class="row">
+            <div class="col-md-12">
+                <label>Start Date</label>
+                <input type="date" [(ngModel)]="layer.startDate" name="startDate" style="width: 100%;" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <label>End Date</label>
+                <input type="date" class="form-element" [(ngModel)]="layer.endDate" name="endDate"
+                    style="width: 100%;" />
+            </div>
+        </div>
 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="btn-holder" style="text-align: right;">
-                        <button type="button" (click)="close()" class="btn btn-default" role="button"
-                            aria-disabled="false" style="padding: 4px 18px;">
-                            <span class="ui-button-text">Cancel</span>
-                        </button>
+        <div class="row">
+            <div class="col-md-12">
+                <label>Filter</label>
+                <input class="form-control search-input" type="text" name="search" placeholder="Search..."
+                    [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource"
+                    (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadMinLength]="2"
+                    [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="text"
+                    (keydown.enter)="$event.preventDefault()" />
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-12">
+                <label>Filters</label>
+            </div>
+        </div>
+        <ng-container *ngFor="let filter of layer.filters">
+            <div *ngIf="filter.field !== 'datetime'" class="row">
+                <div class="col-md-10">
+                    {{filter.label}} contains {{filter.value}}
+                </div>
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-warning" (click)="handleRemove(filter)">
+                        Remove
+                    </button>
+                </div>
+            </div>
+        </ng-container>
 
-                        <button *ngIf="viewMode === 0" type="button btn btn-primary" [disabled]="form.invalid"
-                            class="btn btn-primary" (click)="handleSubmit()">
-                            <i class="icon-upload icon-white"></i>
-                            Search
-                        </button>
+    </ng-container>
+    <ng-container *ngIf="page != null">
+        <div class="row">
+            <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
+                <div class="list-group">
 
-                        <button *ngIf="viewMode !== 0" type="button btn btn-primary" [disabled]="form.invalid || layer.items.length === 0" class="btn btn-primary"
-                            (click)="handleSubmit()">
-                            <i class="icon-upload icon-white"></i>
-                            Submit
-                        </button>
+                    <div *ngFor="let result of page.resultSet | paginate: { itemsPerPage: page.pageSize, currentPage: page.pageNumber, totalItems: page.count }"
+                        class="list-group-item">
+                        <div class="card card-default">
+                            <div class="card-body">
+                                <h5 class="card-title" style="color:#a0a0a0">
+                                    {{result.properties.title}}
+                                </h5>
+                                
+                                <div>{{result.properties.datetime}}</div>
+
+                                <div class="card-left" style="width:calc(100% - 12em); padding:0px;">
+                                    <img style="max-height: 150px"
+                                        [src]="thumbnails[result.id] != null ? (thumbnails[result.id] | safeHtml) : (context + '/net/geoprism/images/thumbnail-default.png')"
+                                        alt="Image">
+                                </div>
+                                <div class="card-right" style="padding:0px; width: 12em;">
+                                    <ul style="list-style: none;padding: 0;">
+                                        <li style="padding: 3px 0 3px 0; min-width:6em;">
+                                            <label>Asset</label>
+                                            <select [(ngModel)]="result.asset" [name]="result.id + '-asset'">
+                                                <ng-container *ngFor="let asset of result.assets | keyvalue">
+                                                    <option
+                                                        *ngIf="asset.value.type === 'image/tiff; application=geotiff; profile=cloud-optimized'"
+                                                        [value]="asset.key">
+                                                        {{asset.key}}
+                                                    </option>
+                                                </ng-container>
+                                            </select>
+                                        </li>
+                                        <li style="padding: 3px 0 3px 0; min-width:6em;">
+                                            <boolean-field [value]="result.enabled"
+                                                (valueChange)="handleToggleItem(result)" label="Enabled">
+                                            </boolean-field>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <pagination-controls (pageChange)="onPageChange($event)" maxSize="10"></pagination-controls>
         </div>
-    </form>
+    </ng-container>
 
-</div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="btn-holder" style="text-align: right;">
+                <button type="button" (click)="close()" class="btn btn-default" role="button" aria-disabled="false"
+                    style="padding: 4px 18px;">
+                    <span class="ui-button-text">Cancel</span>
+                </button>
+
+                <button *ngIf="viewMode === 0" type="button btn btn-primary" [disabled]="form.invalid"
+                    class="btn btn-primary" (click)="handleSubmit()">
+                    <i class="icon-upload icon-white"></i>
+                    Search
+                </button>
+
+                <button *ngIf="viewMode !== 0" type="button btn btn-primary"
+                    [disabled]="form.invalid || layer.items.length === 0" class="btn btn-primary"
+                    (click)="handleSubmit()">
+                    <i class="icon-upload icon-white"></i>
+                    Submit
+                </button>
+            </div>
+        </div>
+    </div>
+</form>
