--- a/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="check-block form-group">
-    <div (click)="toggle()" [ngClass]="{'chk-checked' : value, 'chk-disabled' : disabled}" ng-style="chkstyle" class="jcf-unselectable chk-area">
+    <div (click)="toggle()" [ngClass]="{'chk-checked' : value, 'chk-disabled' : disabled}" [style]="!inline ? '' : 'margin: 0 5px 0 0;'" ng-style="chkstyle" class="jcf-unselectable chk-area">
       <span></span>
     </div>
 
@@ -10,6 +10,6 @@
     </label>
   </div>
   <!-- Force a line break somehow -->
-  <div class="row">
+  <div *ngIf="!inline" class="row">
   </div>
 </div>
