Support for zooming to a STAC layer

--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -306,6 +306,8 @@
                           [title]="'Edit ' + layer.layerName"></a>
                         <a class="fa fa-trash-alt ico-remove" (click)="handleRemoveStacLayer(layer)"
                           [title]="'Remove ' + layer.layerName"></a>
+                        <a class="fa fa-eye" (click)="handleStacZoom(layer)"
+                          [title]="'Zoom to ' + layer.layerName"></a>
                       </span>
                     </span>
 
