--- a/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="check-block form-group">
+  <div class="check-block">
     <div (click)="toggle()" [ngClass]="{'chk-checked' : value, 'chk-disabled' : disabled}" [style]="!inline ? '' : 'margin: 0 5px 0 0;'" ng-style="chkstyle" class="jcf-unselectable chk-area">
       <span></span>
     </div>
