--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -82,7 +82,7 @@
               <tab heading="Data">
                 <div id="hierarchy-tree-container"
                   class="location-management-widget-section location-management-list-container"
-                  [style]="current != null ? 'height: calc(100vh - 296px);overflow-y: auto;' : 'height: calc(100vh - 360px);overflow-y: auto;'">
+                  [style]="current != null ? 'height: calc(100vh - 296px);overflow-y: auto;overflow-x:hidden;' : 'height: calc(100vh - 360px);overflow-y: auto;overflow-x:hidden;'">
                   <div class="list-group">
 
                     <!-- If -->
@@ -214,7 +214,7 @@
               <tab *ngIf="current != null" heading="Products">
                 <div id="hierarchy-tree-container"
                   class="location-management-widget-section location-management-list-container"
-                  style="height: calc(100vh - 296px);overflow-y: auto;">
+                  style="height: calc(100vh - 296px);overflow-y: auto;overflow-x:hidden;">
                   <product-panel [id]="current.id" (toggleMapOrtho)="handleMapOrtho($event)"
                     (toggleMapDem)="handleMapDem($event)"></product-panel>
                 </div>
@@ -240,7 +240,7 @@
       </ng-container>
       <ng-container *ngIf="viewMode === 1">
         <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container"
-          style="height: calc(100vh - 50px);overflow-y: auto;">
+          style="height: calc(100vh - 50px);overflow-y: auto;overflow-x:hidden;">
 
           <layer-panel [layer]="stacLayer" (confirm)="handleStacConfirm($event)" (cancel)="handleStacCancel()">
           </layer-panel>
@@ -287,20 +287,20 @@
             <i class="fas fa-layer-group" *ngIf="!baselayerIconHover"
               style="vertical-align:middle; font-size: 18px;"></i>
             <div *ngIf="baselayerIconHover" style="width: 200px;">
-              <div class="row-form" *ngFor="let baseLayer of baseLayers">
-                <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id'
-                  [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
-                <label class="layer-toggle-label">{{baseLayer.label}}</label>
-              </div>
+            
               <div class="row-form">
                 <div class="list-group">
 
-                  <div *ngFor="let layer of stacLayers" class="list-group-item">
+                  <h4>Layers</h4>
+                  
+<!--                   <span *ngIf="stacLayers.length === 0" style="font-style: italic;color:grey;">No custom layers</span> -->
+                  
+                  <div *ngFor="let layer of stacLayers" class="list-group-item" style="padding:0;height:30px;">
                     <boolean-field [value]="layer.active" (valueChange)="handleToggleStacLayer(layer)" label=""
                       [inline]="true">
                     </boolean-field>
                     <span style="padding-top: 2px;">
-                      <label>{{layer.layerName}}</label>
+                      <label style="padding-left: 5px;">{{layer.layerName}}</label>
                       <span class="pull-right">
                         <a class="fa fa-pencil-alt ico-edit" (click)="handleStacLayer(layer)"
                           [title]="'Edit ' + layer.layerName"></a>
@@ -313,7 +313,16 @@
                 </div>
               </div>
               <div class="row-form">
-                <a class="fa fa-plus" (click)="handleStacLayer()" title="Add layer"></a>
+                <a class="fa fa-plus" (click)="handleStacLayer()" title="Create a layer">&nbsp;Create layer</a>
+              </div>
+              
+              <hr style="margin-top:10px;margin-bottom:10px;">
+              
+              <h4>Basemaps</h4>
+              <div class="row-form" *ngFor="let baseLayer of baseLayers">
+                <input class="layer-toggle-input" type='radio' name='rtoggle' [value]='baseLayer.id'
+                  [checked]="baseLayer.selected" (change)="handleStyle(baseLayer)">
+                <label class="layer-toggle-label" style="padding-left: 5px;">{{baseLayer.label}}</label>
               </div>
             </div>
           </div>
