Sized down image preview to help with loading larger images.

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/image-preview-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/image-preview-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-body">
+<div class="modal-body" style="max-height:80vh;">
     <div *ngIf="message != null" class="error-container">
         <div class="label-holder">
             <strong>Error</strong>
