CRUD unit test for Sensor and Platform
Fixed bug where the sensor type would not populate when editing a sensor

--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
@@ -36,7 +36,7 @@
       </div>
       <div class="form-group">
         <label>Type</label>
-        <select [(ngModel)]="sensor.sensorType" name="sensorType" type="input" class="form-control"
+        <select [(ngModel)]="sensor.sensorTypeOid" name="sensorType" type="input" class="form-control"
           [disabled]="mode === 'READ'" required>
           <option></option>
           <option *ngFor="let type of types" [value]="type.oid">{{type.name}}</option>
