fixed image preview positioning

--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -257,8 +257,8 @@ a.thumbnail.non-clickable:focus {
     // width: 90%;
     // height: 90%;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%) !important;
+//    top: 50%;
+//    transform: translateY(-50%) !important;
 }
 .image-preview-modal > .modal-content {
     width: 100%;
