--- a/uasdm-web/src/main/ng2/src/app/site/component/layer-panel/layer-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/layer-panel/layer-panel.component.html
@@ -29,8 +29,8 @@
 
         <div class="row">
             <div class="col-md-12" style="padding-top: 10px;">
-                <label>Filter</label>
-                <input class="form-control search-input" type="text" name="search" placeholder="Search..."
+                <label>Search</label>
+                <input class="form-control search-input" type="text" name="search" placeholder="Search for products..."
                     autocomplete="off" [(ngModel)]="search" [typeaheadAsync]="true" [typeahead]="dataSource"
                     (typeaheadOnSelect)="handleClick($event)" [typeaheadOptionsLimit]="10" [typeaheadMinLength]="2"
                     [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="text"
@@ -128,14 +128,14 @@
                 <button *ngIf="viewMode === 0" type="button btn btn-primary" [disabled]="form.invalid"
                     class="btn btn-primary" (click)="handleSubmit()">
                     <i class="icon-upload icon-white"></i>
-                    Search
+                    Search for products...
                 </button>
 
                 <button *ngIf="viewMode !== 0" type="button btn btn-primary"
                     [disabled]="form.invalid || layer.items.length === 0" class="btn btn-primary"
                     (click)="handleSubmit()">
                     <i class="icon-upload icon-white"></i>
-                    Submit
+                    {{readonly ? 'Modify layer' : 'Create layer'}}
                 </button>
             </div>
         </div>
