Remove Geoserver from build.

--- a/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
@@ -81,7 +81,7 @@
                             </li>
                             <li *ngIf="product.published" style="padding: 3px 0 3px 0;">
                                 <a class="fa fa-arrow-alt-circle-down" (click)="handleTogglePublish(product)"
-                                    title="Unpublishes the layer from the public mosaic. This layer will no longer be publicly accessible from Geoserver.">Unpublish</a>
+                                    title="Unpublishes the layer from the public mosaic. This layer will no longer be publicly accessible.">Unpublish</a>
                             </li>
                             <li *ngIf="!product.published" style="padding: 3px 0 3px 0;">
                                 <a class="fa fa-arrow-alt-circle-up" (click)="handleTogglePublish(product)"
